force-app/main/default/objects/cgcloud__Metadata_Wizard_Configuration__c/cgcloud__Metadata_Wizard_Configuration__c.object-meta.xml
<CustomObject>
    <label>Metadata Wizard Configuration</label>
    <nameField>
        <label>Metadata Wizard Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Wizard Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>