force-app/main/default/objects/cgcloud__Metadata_Wizard_Configuration__c/fields/cgcloud__Configuration_JSON__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Configuration_JSON__c</fullName>
    <defaultValue>&apos;{}&apos;</defaultValue>
    <label>Configuration JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>