force-app/main/default/objects/cgcloud__Metadata_Wizard_Configuration__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>