force-app/main/default/objects/cgcloud__Metadata_Wizard_Configuration__c/fields/cgcloud__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>